# cornerstone-pdk

./: .gitignore  .pre-commit-config.yaml  README.md  convert_component_yamls.ipynb  output.txt  pyproject.toml
.github/workflows/: data_verification.yml
Ge-on-Si/: process_overview.yaml
Ge_on_Si/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
Ge_on_Si/components/: Ge_on_Si_3800nm_TE_RIB_90_Degree_Bend.yaml  (+1 more)
GeonSi/: layers.lyp  process_overview.yaml
SOI_220nm_Passive/: process_overview.yaml
SiN_200nm/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
SiN_300nm/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
SiN_300nm_CS/: CHANGELOG.md  process_overview.yaml
Si_220nm_active/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
Si_220nm_passive/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
Si_340nm/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
Si_500nm/: CHANGELOG.md  convert_component_yamls.ipynb  drc_rules.lydrc  layers.lyp  process_overview.yaml
Si_sus_bias/: CHANGELOG.md  drc_rules.lydrc  process_overview.yaml
Si_sus_not_bias/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
example_process/: CHANGELOG.md  drc_rules.lydrc  process_overview.yaml
progress notebook/: 1_PDK Repo Todo list.md  2_Individual platform process flow.md  3_ReservedLayers_WavePhotonics.md  Type_Components.md  Type_CrossSections.md  Type_Fibres.md  Type_Materials.md  Type_Ports.md  Type_Processes.md
tests/: test_data.py
(+340 files in other folders)
